[TASK] Compatibility Bootstrap 5

--- a/Resources/Private/Partials/LocalizationManager/Checkbox.html
+++ b/Resources/Private/Partials/LocalizationManager/Checkbox.html
@@ -3,7 +3,7 @@
         data-namespace-typo3-fluid="true"
         lang="en"
 >
-<div class="form-group">
+<div class="form-group mb-2">
     <div class="checkbox">
         <label>
             <input type="checkbox" name="{checkBox.elementName}" {checkBox.checked} {checkBox.tagParams} onclick="{checkBox.onClick}" value="1">&nbsp;{checkBox.label}
