--- a/Resources/Private/Partials/LocalizationManager/SelectField.html
+++ b/Resources/Private/Partials/LocalizationManager/SelectField.html
@@ -4,7 +4,7 @@
         lang="en"
 >
 <!-- Function Menu of module -->
-<div class="form-group form-inline">
+<div class="form-group form-inline mb-2">
     <label for="{selectMenu.elementName}">{selectMenu.label}</label>
     <br>
     <select class="form-control clear-both" id="{selectMenu.elementName}" name="{selectMenu.elementName}" onchange="{selectMenu.onChange}">
