--- a/Resources/Private/Templates/LocalizationManager/Index.html
+++ b/Resources/Private/Templates/LocalizationManager/Index.html
@@ -43,10 +43,10 @@
         <div class="panel panel-default expanded">
             <div class="panel-heading" role="tab" id="headingL10nmgrPanel">
                 <h2 class="panel-title">{title}
-                    <a role="button" data-toggle="collapse" href="#l10nmgrPanel" aria-expanded="true" aria-controls="l10nmgrPanel" class="pull-right"><span class="caret"></span></a>
+                    <a role="button" data-toggle="collapse" data-bs-toggle="collapse" href="#l10nmgrPanel" aria-expanded="true" aria-controls="l10nmgrPanel" class="pull-right"><span class="caret"></span></a>
                 </h2>
             </div>
-            <div id="l10nmgrPanel" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingL10nmgrPanel">
+            <div id="l10nmgrPanel" class="panel-collapse collapse in show" role="tabpanel" aria-labelledby="headingL10nmgrPanel">
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-6">
